--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "gulp-postcss": "^6.1.1",
     "gulp-util": "^3.0.7",
     "imports-loader": "^0.6.5",
+    "netlify-cms": "^0.5.1",
     "netlify-context-explorer": "^1.1.0",
-    "netlify-cms": "^0.5.0-beta.10",
     "postcss-at2x": "^2.0.0",
     "postcss-colour-functions": "^1.5.1",
     "postcss-cssnext": "^2.7.0",
@@ -46,7 +46,9 @@
     "postcss-nested": "^1.0.0",
     "postcss-simple-extend": "^1.0.0",
     "postcss-simple-vars-async": "^1.2.1",
-    "react": "^15.4.1",
+    "react": "^15.6.2",
+    "react-transition-group": "^1.2.1",
+    "slate": "^0.28.2",
     "string": "^3.3.1",
     "toml": "^2.3.0",
     "url-loader": "^0.5.7",
